# cctp-integration-test

./: .env  Anchor.toml  README.md  api.js  bridge.ts  client.js  createToken.sh  getAttestation.ts  package-lock.json  package.json  runTest.sh  sendSol.ts  testDeposit.ts  testDepositv2.ts  testDepositv3.ts
programs/cctpintegration/: Cargo.toml
programs/cctpintegration/src/: lib.back  lib.rs  lib.rs.back2  lib.rs.working  pda_derivations.rs
programs/cctpintegration/src/usdc/: usdc.rs.back
tests/: cctpintegration.ts
