[package]
name = "cctpintegration"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cctpintegration"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
config = "0.15.13"
libsecp256k1 = "=0.7.1"
token-messenger-minter-v2 = { path = "src/v2/token-messenger-minter-v2", features = ["cpi"] }
message-transmitter-v2 = { path = "src/v2/message-transmitter-v2", features = ["cpi"] }
